@@ -1,5 +1,10 @@
 2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
 
+	* Parser/CDocumentParser.cs:
+	* Parser/TagDatabaseManager.cs: Lock projectinfo on update.
+
+2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
 	* Gui/EditPackagesDialog.cs: Don't let bad packages break
 	  scanning.
 
